k8s/allredis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-order0
spec:
  serviceName: redis-order0
  replicas: 3
  selector:
    matchLabels:
      app: redis-order0
  template:
    metadata:
      labels:
        app: redis-order0
    spec:
      containers:
      - name: redis-order0
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-order0
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-order0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-order1
spec:
  serviceName: redis-order1
  replicas: 3
  selector:
    matchLabels:
      app: redis-order1
  template:
    metadata:
      labels:
        app: redis-order1
    spec:
      containers:
      - name: redis-order1
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-order1
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-order1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-order2
spec:
  serviceName: redis-order2
  replicas: 3
  selector:
    matchLabels:
      app: redis-order2
  template:
    metadata:
      labels:
        app: redis-order2
    spec:
      containers:
      - name: redis-order2
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-order2
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-order2

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stock0
spec:
  serviceName: redis-stock0
  replicas: 3
  selector:
    matchLabels:
      app: redis-stock0
  template:
    metadata:
      labels:
        app: redis-stock0
    spec:
      containers:
      - name: redis-stock0
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stock0
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-stock0
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stock1
spec:
  serviceName: redis-stock1
  replicas: 3
  selector:
    matchLabels:
      app: redis-stock1
  template:
    metadata:
      labels:
        app: redis-stock1
    spec:
      containers:
      - name: redis-stock1
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stock1
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-stock1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-payment0
spec:
  serviceName: redis-payment0
  replicas: 3
  selector:
    matchLabels:
      app: redis-payment0
  template:
    metadata:
      labels:
        app: redis-payment0
    spec:
      containers:
      - name: redis-payment0
        image: redis:7.0.10-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-payment0
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis-payment0
