k8s/ordersentinel-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel-order0
spec:
  serviceName: sentinel0
  replicas: 3
  selector:
    matchLabels:
      app: sentinel0
  template:
    metadata:
      labels:
        app: sentinel0
    spec:
      containers:
      - name: sentinel0
        image: redis:7.0.10-alpine
        command: ["redis-sentinel"]
        args: ["/etc/redis/sentinel.conf"]
        ports:
        - containerPort: 5000
          name: sentinel
        volumeMounts:
        - name: redis-config
          mountPath: /etc/redis/
        - name: data
          mountPath: /data
      volumes:
      - name: redis-config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel0
spec:
  clusterIP: None
  ports:
  - port: 5000
    targetPort: 5000
    name: sentinel
  selector:
    app: sentinel0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel-order1
spec:
  serviceName: sentinel1
  replicas: 3
  selector:
    matchLabels:
      app: sentinel1
  template:
    metadata:
      labels:
        app: sentinel1
    spec:
      containers:
      - name: sentinel1
        image: redis:7.0.10-alpine
        command: ["redis-sentinel"]
        args: ["/etc/redis/sentinel.conf"]
        ports:
        - containerPort: 5000
          name: sentinel
        volumeMounts:
        - name: redis-config
          mountPath: /etc/redis/
        - name: data
          mountPath: /data
      volumes:
      - name: redis-config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel1
spec:
  clusterIP: None
  ports:
  - port: 5000
    targetPort: 5000
    name: sentinel
  selector:
    app: sentinel1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel-order2
spec:
  serviceName: sentinel2
  replicas: 3
  selector:
    matchLabels:
      app: sentinel2
  template:
    metadata:
      labels:
        app: sentinel2
    spec:
      containers:
      - name: sentinel2
        image: redis:7.0.10-alpine
        command: ["redis-sentinel"]
        args: ["/etc/redis/sentinel.conf"]
        ports:
        - containerPort: 5000
          name: sentinel
        volumeMounts:
        - name: redis-config
          mountPath: /etc/redis/
        - name: data
          mountPath: /data
      volumes:
      - name: redis-config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel2
spec:
  clusterIP: None
  ports:
  - port: 5000
    targetPort: 5000
    name: sentinel
  selector:
    app: sentinel2
