k8s/orderservice-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service0
spec:
  type: LoadBalancer
  selector:
    component: order-service0
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-service0
  template:
    metadata:
      labels:
        component: order-service0
    spec:
      containers:
        - name: order-service0
          image: ghcr.io/wdm23-5/wdm-project-go/order:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["./order-gin"]
          args: [""]
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service1
spec:
  type: LoadBalancer
  selector:
    component: order-service1
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-service1
  template:
    metadata:
      labels:
        component: order-service1
    spec:
      containers:
        - name: order-service1
          image: ghcr.io/wdm23-5/wdm-project-go/order:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["./order-gin"]
          args: [""]
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service2
spec:
  type: LoadBalancer
  selector:
    component: order-service2
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service2
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-service2
  template:
    metadata:
      labels:
        component: order-service2
    spec:
      containers:
        - name: order-service2
          image: ghcr.io/wdm23-5/wdm-project-go/order:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["./order-gin"]
          args: [""]
          ports:
            - containerPort: 5000
