k8s/payment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    component: payment
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment
  template:
    metadata:
      labels:
        component: payment
    spec:
      containers:
        - name: payment
          image: ghcr.io/wdm23-5/wdm-project-go/payment:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["./payment-gin"]
          args: [""]
          ports:
            - containerPort: 5000
