k8s/stock-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: LoadBalancer
  selector:
    component: stock
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock
  template:
    metadata:
      labels:
        component: stock
    spec:
      containers:
        - name: stock
          image: ghcr.io/wdm23-5/wdm-project-go/stock:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["./stock-gin"]
          args: [""]
          ports:
            - containerPort: 5000
